--- a/repo.html
+++ b/repo.html
@@ -14,7 +14,7 @@
 </head>
 <script type="text/javascript">
     function Redirect() {
-        window.location = "https:/onixclient.com/scripting/repo";
+        window.location = "https://onixclient.com/scripting/repo";
     }
     Redirect()
 </script>
