--- a/twitter.html
+++ b/twitter.html
@@ -15,7 +15,7 @@
 </head>
 <script type="text/javascript">
     function Redirect() {
-        window.location = "https://twitter.com/onixclientmc";
+        window.location = "https://twitter.com/onixclient";
     }
     Redirect()
 </script>
