chunk border fuck you onix

--- a/features.html
+++ b/features.html
@@ -177,7 +177,7 @@
             "AutoGG",
             "Block Outline/Overlay",
             "CPS Counter",
-            "Chunk Borders",
+            "Chunk Border",
             "Clock",
             "Combo Counter",
             "Coordinates",
