--- a/features.html
+++ b/features.html
@@ -207,6 +207,7 @@
             "Speed Display",
             "TNT Timer",
             "Third Person Nametag",
+            "Proximity Chat",
             "Toggle Sprint/Sneak",
             "Waypoints",
             "Zoom"
