add import button

--- a/scripting/repo.html
+++ b/scripting/repo.html
@@ -380,7 +380,7 @@
     <div class="grid-container">
         <div id="buttons">
             <script>
-            let showImport = false;
+            let showImport = true;
             fetch("https://raw.githubusercontent.com/OnixClient-Scripts/OnixClient_Scripts/master/index.json")
                 .then((response) => response.json())
                 .then((data) => {
