--- a/scripting/repo.html
+++ b/scripting/repo.html
@@ -440,7 +440,7 @@
                                 buttonContainer.appendChild(buttonImport);
                                 const buttonImportTooltip = document.createElement("div");
                                 buttonImportTooltip.classList.add("import-button-tooltip");
-                                buttonImportTooltip.textContent = "Import";
+                                buttonImportTooltip.textContent = "Import (Game needs to be open!)";
                                 buttonImport.appendChild(buttonImportTooltip);
                             }
 
