--- a/scripting/repo.html
+++ b/scripting/repo.html
@@ -441,6 +441,7 @@
                                 const buttonImportTooltip = document.createElement("div");
                                 buttonImportTooltip.classList.add("import-button-tooltip");
                                 buttonImportTooltip.textContent = "Import (Game needs to be open!)";
+                                buttonImportTooltip.style.whiteSpace = "nowrap";
                                 buttonImport.appendChild(buttonImportTooltip);
                             }
 
