--- a/faq.html
+++ b/faq.html
@@ -33,7 +33,7 @@
             </span>
         </div><br>
         <br><br>
-        <iframe style="width: 100%; height: 100vh; border: 0px;" title="OC FAQ" id="faq" src="https://onixclient.com/FaQ/index"></iframe>
+        Refer to the FAQ on the discord server! https://onixclient.com/discord
         <footer>
             <div>
                 <br><br>
