update many a file :D

--- a/development.html
+++ b/development.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
 	<link rel="stylesheet" href="styles/style.css" />
 	<link rel="icon" type="onixlogo" href="favicon.ico">
-	<title>Onix Client</title>
+	<title>Onix Client - Developmental Changelog</title>
 	<meta content="Onix Client Developmental Changelog" property="og:title">
 	<meta content="https://onixclient.com" property="og:url">
 	<meta content="The Onix Client developmental, in-progress changelog." property="og:description">
