--- a/faq.html
+++ b/faq.html
@@ -5,7 +5,7 @@
     <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="icon" type="onixlogo" href="favicon.ico">
-    <title>Onix Client</title>
+    <title>Onix Client - FAQ</title>
     <meta content="Onix Client FAQ" property="og:title">
     <meta content="Onix Client - Frequently Asked Questions" property="og:site_name">
     <meta content="https://onixclient.com/faq" property="og:url">
