--- a/getonix.html
+++ b/getonix.html
@@ -5,7 +5,7 @@
     <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="icon" type="onixlogo" href="favicon.ico">
-    <title>Onix Client Download</title>
+    <title>Onix Client - Download</title>
     <meta content="Onix Client Download" property="og:title">
     <meta content="Onix Client - Download" property="og:site_name">
     <meta content="https://onixclient.com/download" property="og:url">
