--- a/discord.html
+++ b/discord.html
@@ -5,7 +5,7 @@
     <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="icon" type="onixlogo" href="favicon.ico">
-    <title>Onix Client</title>
+    <title>Onix Client - Discord</title>
     <meta content="Onix Client Discord" property="og:title">
     <meta content="https://discord.gg/onixclient" property="og:url">
     <meta content="The best Minecraft: Bedrock Edition client! (Windows 10/11 only)." property="og:description">
