--- a/license.html
+++ b/license.html
@@ -5,7 +5,7 @@
     <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="icon" type="onixlogo" href="favicon.ico">
-    <title>Onix Client</title>
+    <title>Onix Client - License</title>
     <meta content="Onix Client License" property="og:title">
     <meta content="Onix Client - License" property="og:site_name">
     <meta content="https://onixclient.com/license" property="og:url">
