--- a/patreon.html
+++ b/patreon.html
@@ -5,7 +5,7 @@
     <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="icon" type="onixlogo" href="favicon.ico">
-    <title>Onix Client</title>
+    <title>Onix Client - Patreon</title>
     <meta content="Onix Client Patreon" property="og:title">
     <meta content="Onix Client - Patreon" property="og:site_name">
     <meta content="https://onixclient.com/patreon" property="og:url">
