--- a/download.html
+++ b/download.html
@@ -46,6 +46,7 @@
         </div>
         <script>
             let downloadButtonInfiniteGrow = document.getElementById('downloadButtonInfiniteGrow');
+            let chroma = document.getElementsByClassName('chroma')[0];
             let scale = 1.0;
             let shouldScale = false;
             let animationFrame;
@@ -56,7 +57,7 @@
                 animationFrame = requestAnimationFrame(scaleElement);
             }
 
-            downloadButtonInfiniteGrow.addEventListener('mouseover', function() {
+            chroma.addEventListener('mouseover', function() {
                 if (!shouldScale) {
                     shouldScale = true;
                     animationFrame = requestAnimationFrame(scaleElement);
