--- a/features.html
+++ b/features.html
@@ -191,7 +191,7 @@
             "Flappy Bird",
             "Fullbright",
             "Hitboxes",
-            "Hurt Color",
+            "Hurt Color Changer",
             "Item Physics",
             "Java Debug Menu",
             "Keystrokes",
