--- a/buy.html
+++ b/buy.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="icon" type="onixlogo" href="favicon.ico">
     <title>Onix Client</title>
-    <meta content="Onix Client Patreon" property="og:title">
+    <meta content="Onix Client Premium" property="og:title">
     <meta content="Onix Client - Patreon" property="og:site_name">
-    <meta content="https://onixclient.com/patreon" property="og:url">
-    <meta content="https://onixclient.com/assets/logoGlowy.png" property="og:image">
+    <meta content="https://onixclient.com/buy" property="og:url">
+    <meta content="https://github.com/jqms/jqms.github.io/blob/main/assets/UpdatedPromotionalImageCompressed.png?raw=true" property="og:image">
     <meta content="#008FC1" data-react-helmet="true" name="theme-color">
 </head>
 <script type="text/javascript">
