--- a/buy.html
+++ b/buy.html
@@ -9,7 +9,7 @@
     <meta content="Onix Client Premium" property="og:title">
     <meta content="Onix Client - Patreon" property="og:site_name">
     <meta content="https://onixclient.com/buy" property="og:url">
-    <meta content="https://github.com/jqms/jqms.github.io/blob/main/assets/UpdatedPromotionalImageCompressed.png?raw=true" property="og:image">
+    <meta content="https://onixclient.com/assets/PromotionalImage.png" property="og:image">
     <meta content="#008FC1" data-react-helmet="true" name="theme-color">
     <meta content="summary_large_image" name="twitter:card">
 </head>
