--- a/buy.html
+++ b/buy.html
@@ -5,13 +5,24 @@
     <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="icon" type="onixlogo" href="favicon.ico">
-    <title>Onix Client</title>
-    <meta content="Onix Client Premium" property="og:title">
-    <meta content="Onix Client - Patreon" property="og:site_name">
-    <meta content="https://onixclient.com/buy" property="og:url">
-    <meta content="https://onixclient.com/assets/PromotionalImage.png" property="og:image">
-    <meta content="#008FC1" data-react-helmet="true" name="theme-color">
-    <meta content="summary_large_image" name="twitter:card">
+    <!-- Primary Meta Tags -->
+    <title>Onix Client Premium</title>
+    <meta name="title" content="Onix Client Premium" />
+    <meta name="description" content="Download Onix Client Premium today for only $4.01/month!" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://onixclient.com/buy" />
+    <meta property="og:title" content="Onix Client Premium" />
+    <meta property="og:description" content="Download Onix Client Premium today for only $4.01/month!" />
+    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+    
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://onixclient.com/buy" />
+    <meta property="twitter:title" content="Onix Client Premium" />
+    <meta property="twitter:description" content="Download Onix Client Premium today for only $4.01/month!" />
+    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
 </head>
 <script type="text/javascript">
     function Redirect() {
