FUCK YOU METATAGS

--- a/buy.html
+++ b/buy.html
@@ -15,14 +15,14 @@
     <meta property="og:url" content="https://onixclient.com/buy" />
     <meta property="og:title" content="Onix Client Premium" />
     <meta property="og:description" content="Download Onix Client Premium today for only $4.01/month!" />
-    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+    <meta property="og:image" content="https://onixclient.com/assets/PromotionalImage.png" />
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://onixclient.com/buy" />
     <meta property="twitter:title" content="Onix Client Premium" />
     <meta property="twitter:description" content="Download Onix Client Premium today for only $4.01/month!" />
-    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+    <meta property="twitter:image" content="https://onixclient.com/assets/PromotionalImage.png" />
 </head>
 <script type="text/javascript">
     function Redirect() {
